[tool.poetry]
name = "repl-nix-idle-clicker-adventure-capitalist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_idle_clicker_adventure_capitalist"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
